<resources>
    <string name="app_name">MySdu</string>
    <string name="title_syllabus">课程表</string>
    <string name="title_todo">待办事项</string>
    <string name="title_map">校区地图</string>
    <string name="title_grade">成绩查询</string>
    <string name="title_misc">功能</string>
    <string name="title_activity_logout">退出登录</string>
    <string name="exam_schedule_empty_hint">该功能因暂无考试安排，无从得知数据格式，尚未开发。当有考试安排发布后，会尽快开发，敬请期待新版本。</string>
    <string name="map_turn_on_gps">打开GPS才能在地图中显示你的位置哦！ </string>
</resources>