<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_syllabus"
        android:icon="@drawable/ic_syllabus"
        android:title="@string/title_syllabus" />

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_todo"
        android:title="@string/title_todo" />

    <!--    <item-->
    <!--        android:id="@+id/navigation_map"-->
    <!--        android:icon="@drawable/ic_map"-->
    <!--        android:title="@string/title_map" />-->

    <!--    <item-->
    <!--        android:id="@+id/navigation_grade"-->
    <!--        android:icon="@drawable/ic_grade"-->
    <!--        android:title="@string/title_grade" />-->

    <item
        android:id="@+id/navigation_misc"
        android:icon="@drawable/ic_misc"
        android:title="@string/title_misc" />

</menu>